style.css
body{
  box-sizing: border-box;
  width: 100%;
  margin: 0;
  padding: 0;
  top: 0;
  left: 0;

}
.banner{
  width:100%;
  height:600px;

}
.heading{
  width:40%;
  margin:auto;
  float: left;
  margin:7% 9% 2%;
}
h4{
  font-family: 'Montserrat', sans-serif;
  font-size: 16px;
  font-weight: 300;
  letter-spacing: .12em;
  text-transform: uppercase;
  line-height: 1.5em;
  display: none;
}
h1{
  font-family: 'Montserrat', sans-serif;
  font-size: 70px;
  font-weight: 700;
  letter-spacing: .12em;
  text-transform: uppercase;
  line-height: 1.1em;
  display: none;
}
.profile-img{
  float:left;
  width: 50%;
  margin: 5%;
  max-width: 300px;
  border-radius: 2px;

}
.button{
  width:150px;
  height:40px;
  text-align: center;
  background-color: #fedb00;
  color:white;
  font-family: 'Montserrat', sans-serif;
  font-size: 13px;
  font-weight: 700;
  letter-spacing: .12em;
  text-transform: uppercase;
  line-height: 1.5em;
  border-radius: 5px;
  display: none;
}
.button-text{
  padding-top:9px;
  /* background-color: red; */
}
.section{
  width:100%;
  height:24%;
  padding-bottom:6%;

}
.about-section{
  background-color:rgb(226,225,219);
  color: rgb(57,58,51);
  width:100%;
  height:20%;
  padding-bottom:5%;
  padding-top: 2%;
  background-color:rgb(245,245,235);

}
.section-header{
  font-size:35px;
  margin:4% 7% 4% 7%;
  letter-spacing:.02em;
  text-transform: uppercase;
  font-weight: 500;
  color:rgb(57,58,51);
}
.about-p{
  font-family: 'Montserrat', sans-serif;
  font-size: 18px;
  font-weight: 500;
  line-height: 1.8em;
  margin-left: 7%;
  margin-right: 7%;
  width:60%;
}
.col-4-container{
font-family: 'Montserrat', sans-serif;
width:100%;
 margin:auto;
 padding-bottom:6%;
 color: rgb(57,58,51);


}

.row .col-4{
  width:28.3333%;
  float: left;
  margin-left:1%;
  margin-right:2%;
  padding-top:4%;
  padding-left: 1%;
  padding-right: 1%;
  text-align: center;
  /* border-top: 1px solid grey; */

}

.row:after {
  display: table;
  clear: both;
  content: '';
}
.portfolio-image{
  /* width:100%; */
  max-width: 200px;
  margin:0 auto;
  border:1px solid grey;

}

.portfolio{
  margin-top:5%;
  text-align: center;
  line-height: 1.5em;
  color:rgb(57,58,51);


  /* margin-bottom:2%; */
}

.see-button{
  width:150px;
  height:39px;
  text-align: center;
  font-family: 'Montserrat', sans-serif;
  font-size: 12px;
  font-weight: 700;
  letter-spacing: .12em;
  text-transform: uppercase;
  line-height: 1.5em;
  /* border-radius: 5px; */
  border: 1px solid black;
  margin:15px  auto;
  padding:3px;

}

.button:hover{
  background-color: lightgrey;
}
.see-button:hover{
  background-color: rgb(226,225,219);
}
.col-3-container{
font-family: 'Montserrat', sans-serif;
width:100%;
 margin:auto;
 padding-bottom:2%;

}

.row .col-3{
  width:20%;
  float: left;
  margin-left:1%;
  margin-right:1%;
  padding-top:2%;
  padding-left: 1%;
  padding-right: 1%;
}
#portfolio-row-1, #portfolio-row-2 {
  text-align: center;
}

.skills-image{
  /* width:100%; */
max-height: 100px;
max-width: 200px;
}

.footer-header{
  font-size:35px;
  /* margin-left:7%; */
  margin-right:7%;
  margin-bottom: 2%;
  color: rgb(57,58,51);
 letter-spacing:.02em;
  text-transform: uppercase;
  font-weight: 500;
}
.footer-section{
  width:100%;
  height:10%;
  padding:5% 0 3% 7%;
  background-color:rgb(226,225,219);
}

.contact-image{
  margin:5% 2% 2% 0;
  max-height: 50px;
}


ul{
  list-style-type: none;
  text-align: center;
  font-family: 'Montserrat', sans-serif;

}
li{
  padding:10px;
}
.mobile-profile-img{
  display: none;
  max-width: 200px;
}
@media only screen and (max-width: 600px) {
    .banner{
      height:520px;
    }
    .heading{
      width:100%;
      text-align: center;
      margin:0;
    }
    h1{
      font-size: 40px;
    }
    h4{
      font-size: 13px;
    }
    .profile-img{
      display: none;
    }
    .button{
      margin:4% auto;
    }
    .mobile-profile-img{
      display: inline;
    }
    .section-header{
      font-size: 25px;
      text-align: center;
    }
    .section{
      height:30%;

    }
    .about-section{
      text-align: center;
    }
    .about-p{
      font-size: 14px;
      width:90%;
    }
    .row .col-4{
      width:100%;
      margin-bottom:5%;
      /* height:40%; */
    }
    .portfolio-image{
      max-width: 150px;
      margin:0 auto;

    }
    .portfolio{
      font-size: 12px;
      padding: 0 25%

    }
    .skills-image{
      max-width: 100px;
    }

    .footer-section{
      margin:0 auto;
      padding-left: 0;
      padding-right: 0;
    }

    .footer-header{
      font-size:25px;
      text-align: center;
      margin: 6% auto;
    }
    .image-container{
      text-align: center;
    }
    .contact-image{
      max-height: 35px;
      margin: 0 10px;
      /* margin:0 auto; */
    }



}

